--- a/app/src/main/res/layout/dialog_mydevices.xml
+++ b/app/src/main/res/layout/dialog_mydevices.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/_210sdp"
+        android:layout_height="@dimen/_270sdp"
         app:cardBackgroundColor="@color/White"
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardElevation="0dp">
@@ -24,7 +24,7 @@
                 android:id="@+id/lbl_deviceDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Device Details"
+                android:text="Tablet Details"
                 android:textStyle="bold"
                 android:textSize="@dimen/_15sdp"
                 android:textAlignment="center"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:text="9f9c9v"
                 android:layout_below="@id/lbl_deviceDetail"
-                android:layout_toRightOf="@+id/lbl_deviceId"/>
+                android:layout_toEndOf="@+id/lbl_deviceId"/>
 
             <TextView
                 android:id="@+id/lbl_serialNo"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9f9c9v"
-                android:layout_toRightOf="@+id/lbl_serialNo"
+                android:layout_toEndOf="@+id/lbl_serialNo"
                 android:layout_below="@id/lbl_deviceId"/>
 
             <TextView
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9f9c9v"
-                android:layout_toRightOf="@+id/lbl_tabBrand"
+                android:layout_toEndOf="@+id/lbl_tabBrand"
                 android:layout_below="@id/lbl_serialNo"/>
 
             <TextView
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9f9c9v"
-                android:layout_toRightOf="@+id/lbl_tabModel"
+                android:layout_toEndOf="@+id/lbl_tabModel"
                 android:layout_below="@id/lbl_tabBrand"/>
 
             <TextView
@@ -104,8 +104,64 @@
                 android:layout_height="wrap_content"
                 android:text="9f9c9v"
                 android:textStyle="bold"
-                android:layout_toRightOf="@+id/lbl_status"
+                android:layout_toEndOf="@+id/lbl_status"
                 android:layout_below="@id/lbl_tabModel" />
+
+            <TextView
+                android:id="@+id/lbl_ponumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PO No. : "
+                android:textStyle="bold"
+                android:layout_below="@+id/lbl_status"/>
+            <TextView
+                android:id="@+id/tv_ponumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/lbl_status"
+                android:layout_below="@id/lbl_status" />
+
+            <TextView
+                android:id="@+id/lbl_donorname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Donor : "
+                android:textStyle="bold"
+                android:layout_below="@+id/lbl_ponumber"/>
+            <TextView
+                android:id="@+id/tv_donorname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/lbl_status"
+                android:layout_below="@id/lbl_ponumber" />
+
+            <TextView
+                android:id="@+id/lbl_yop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="YOP : "
+                android:textStyle="bold"
+                android:layout_below="@+id/lbl_donorname"/>
+            <TextView
+                android:id="@+id/tv_yop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/lbl_status"
+                android:layout_below="@id/lbl_donorname" />
+
+            <TextView
+                android:id="@+id/lbl_prog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Program : "
+                android:textStyle="bold"
+                android:layout_below="@+id/lbl_yop"/>
+            <TextView
+                android:id="@+id/tv_prog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/lbl_status"
+                android:layout_below="@id/lbl_yop" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/dialog_btn_exit"
