--- a/app/src/main/res/layout/fragment_add_new_tablet.xml
+++ b/app/src/main/res/layout/fragment_add_new_tablet.xml
@@ -39,7 +39,7 @@
     <FrameLayout
         android:id="@+id/barcode_frame"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_140sdp"
+        android:layout_height="@dimen/_120sdp"
         android:layout_below="@+id/tv_label" />
 
     <RelativeLayout
@@ -168,6 +168,7 @@
             android:layout_below="@id/ll_spinnerOne"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_7sdp"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -224,6 +225,43 @@
                 android:textSize="@dimen/_10sdp"
                 android:visibility="gone"
                 tools:ignore="RtlSymmetry" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_programPOnum"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_below="@id/ll_brandModel"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+        <Spinner
+            android:id="@+id/spinner_program"
+            style="@style/spinner_style_new"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_spinner_whitebg"/>
+
+        <EditText
+            android:id="@+id/et_ponumber"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@color/White"
+            android:ellipsize="end"
+            android:fontFamily="@font/glacialindifferenceregular"
+            android:hint="Add PO number"
+            android:maxLines="1"
+            android:paddingLeft="@dimen/_5sdp"
+            android:textSize="@dimen/_10sdp"
+            tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
     </RelativeLayout>
